Send UMA recording state to TranslateRanker.

This will prevent the accumulation of translate events when UMA recording is not enabled.

Also:
 - clear the event_cache when recording is disabled.
 - Change 'return' to 'continue' in translate_ranker_metrics_provider in case only a subset of browser states don't have a valid ranker.

BUG=730032

Review-Url: https://codereview.chromium.org/2930433004
Cr-Commit-Position: refs/heads/master@{#478719}

Former-commit-id: a33125bccd08d77590b3ee8907d85ca5a042c78a